<resources>
    <string name="app_name">PuyDuFouExperience</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="espectaculo_imagen">imagen de espectaculo de dos caballos</string>
    <string name="favorito">icono corazon marcar como favorito</string>
    <string name="ajustes_idioma">ajustes idioma</string>
    <string name="ajustes_notificaciones">ajustes notificaciones</string>
    <string name="activar_notificaciones">activar notificaciones</string>
    <string name="ajustes_tema">ajustes tema</string>
    <string name="tema_claro">tema claro</string>
    <string name="tema_oscuro">tema oscuro\n</string>
    <string name="notificaciones_activadas">Notificaciones activadas</string>
    <string name="notificaciones_desactivadas">Notificaciones desactivadas</string>
    <string name="crear_recordatorio">Crear recordatorio</string>
    <string name="ajustes_logout">Botón Cerrar Sesión</string>
    <string name="ajustes_logoutrb">Cerrar Sesion</string>
</resources>