<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AjustesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Idioma -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ajustes_idioma"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rgIdioma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbEspanol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Español" />

                <RadioButton
                    android:id="@+id/rbIngles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="English" />
            </RadioGroup>

            <!-- Notificaciones -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/ajustes_notificaciones"
                android:textSize="18sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchNotificaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activar_notificaciones" />

            <!-- Tema -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/ajustes_tema"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rgTema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbClaro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tema_claro" />

                <RadioButton
                    android:id="@+id/rbOscuro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tema_oscuro" />
            </RadioGroup>
            <!-- Cerrar Sesion -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/ajustes_logout"
                android:textSize="18sp" />
            <RadioButton
                android:id="@+id/rbLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajustes_logoutrb" />



        </LinearLayout>
    </ScrollView>


</FrameLayout>

